[gd_scene load_steps=5 format=3 uid="uid://dhpvpfn5mjo1r"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_dlf0v"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_for/g_block_for.gd" id="2_6ngvy"]
[ext_resource type="PackedScene" uid="uid://cq3i7td46je11" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_end_point.tscn" id="3_x1irg"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="4_rp6d8"]

[node name="GBlockFor" instance=ExtResource("1_dlf0v")]
script = ExtResource("2_6ngvy")

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Блок for"

[node name="IterAmountContainer" type="HBoxContainer" parent="Control/MarginContainer/Content" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/Content/IterAmountContainer" index="0"]
layout_mode = 2
text = "Число повторений"

[node name="SpinBox" type="SpinBox" parent="Control/MarginContainer/Content/IterAmountContainer" index="1"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="GEndPoint" parent="EndPoints" index="0" instance=ExtResource("3_x1irg")]
position = Vector2(0, -52)

[node name="GEndPoint2" parent="EndPoints" index="1" instance=ExtResource("3_x1irg")]
position = Vector2(-130, 0)

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("4_rp6d8")]
position = Vector2(66, 53)
point_label = "–"

[node name="GBeginPoint2" parent="BeginPoints" index="1" instance=ExtResource("4_rp6d8")]
position = Vector2(-69, 52)
point_label = "+"
